# LLM-GeoBenchmark

./: .gitignore  .pre-commit-config.yaml  README.md  commons.py  config.toml  config_template.toml  deepeval_config.yaml  example.py  pyproject.toml
.github/workflows/: python-package.yml
configs/: config_gemma.toml  config_geogalactica.toml  config_k2.toml  config_llama31.toml  config_llama32.toml  config_ministral.toml  config_peft_gemma_1.toml  config_peft_llama31_1.toml  config_peft_llama32_1.toml  config_peft_ministral_1.toml
gas/: cli.py  commons.py  evaluation_pipeline.py  logger.py  main.py  metrics.py  pipeline.py  test_cases_pipeline.py
gas/data/geobench/: geobenchmark_npee.json
gas/database/: geobench_provider.py  geobenchmark_provider.py
gas/metrics/: __init__.py  accuracy_score.py  bert_score.py  metrics.py
gas/models/: __init__.py  base.py  gemma.py  gpt.py  k2.py  llama.py  mistralai.py  peft.py  peft_models.py
gas/models/deprecated/: gemma.py  k2.py  llama.py  mistralai.py  peft.py
gas/pipelines/: __init__.py  evaluation.py  generation.py  pipeline.py
gas/providers/: __init__.py  data.py  prompt.py  test_cases.py
paper/: README.md  run_evaluate_all.sh  run_generate_all.sh
paper/configs/: config_gemma.toml  config_geogalactica.toml  config_k2.toml  config_llama31.toml  config_llama32.toml  config_ministral.toml  config_peft_gemma_1.toml  config_peft_llama31_1.toml  config_peft_llama32_1.toml  config_peft_ministral_1.toml  config_peft_phi.toml  config_phi4.toml
paper/test_cases/: Llama-3_2-3B-Instruct_CHOICE.json  Llama-3_2-3B-Instruct_COMPLETION.json  Llama-3_2-3B-Instruct_NOUN.json  Llama-3_2-3B-Instruct_QA.json  Llama-3_2-3B-Instruct_TF.json  Meta-Llama-3_1-8B-Instruct_CHOICE.json  Meta-Llama-3_1-8B-Instruct_COMPLETION.json  Meta-Llama-3_1-8B-Instruct_NOUN.json  Meta-Llama-3_1-8B-Instruct_QA.json  Meta-Llama-3_1-8B-Instruct_TF.json  Ministral-8B-Instruct-2410_CHOICE.json  Ministral-8B-Instruct-2410_COMPLETION.json  Ministral-8B-Instruct-2410_NOUN.json  Ministral-8B-Instruct-2410_QA.json  Ministral-8B-Instruct-2410_TF.json  gemma-2-9b-it_CHOICE.json  gemma-2-9b-it_COMPLETION.json  gemma-2-9b-it_NOUN.json  gemma-2-9b-it_QA.json  gemma-2-9b-it_TF.json  gemma_eos_fixed-gemma-2-9b-it-Jan14_09-39-19_CHOICE.json  gemma_eos_fixed-gemma-2-9b-it-Jan14_09-39-19_COMPLETION.json  gemma_eos_fixed-gemma-2-9b-it-Jan14_09-39-19_NOUN.json  gemma_eos_fixed-gemma-2-9b-it-Jan14_09-39-19_QA.json  gemma_eos_fixed-gemma-2-9b-it-Jan14_09-39-19_TF.json  geogalactica_CHOICE.json  geogalactica_COMPLETION.json  geogalactica_QA.json  geogalactica_TF.json  k2_CHOICE.json  k2_COMPLETION.json  k2_NOUN.json  k2_QA.json  k2_TF.json  llama31_1epoch-Meta-Llama-3_1-8B-Instruct-Jan09_09-44-18_CHOICE.json  llama31_1epoch-Meta-Llama-3_1-8B-Instruct-Jan09_09-44-18_COMPLETION.json  llama31_1epoch-Meta-Llama-3_1-8B-Instruct-Jan09_09-44-18_NOUN.json  llama31_1epoch-Meta-Llama-3_1-8B-Instruct-Jan09_09-44-18_QA.json  llama31_1epoch-Meta-Llama-3_1-8B-Instruct-Jan09_09-44-18_TF.json  llama32_1epoch-Llama-3_2-3B-Instruct-Jan08_19-19-13_CHOICE.json  (+20 more)
paper/test_cases/result/: result_Llama-3_2-3B-Instruct_CHOICE.json  result_Llama-3_2-3B-Instruct_COMPLETION.json  result_Llama-3_2-3B-Instruct_NOUN.json  result_Llama-3_2-3B-Instruct_QA.json  result_Llama-3_2-3B-Instruct_TF.json  result_Meta-Llama-3_1-8B-Instruct_CHOICE.json  result_Meta-Llama-3_1-8B-Instruct_COMPLETION.json  result_Meta-Llama-3_1-8B-Instruct_NOUN.json  result_Meta-Llama-3_1-8B-Instruct_QA.json  result_Meta-Llama-3_1-8B-Instruct_TF.json  result_Ministral-8B-Instruct-2410_CHOICE.json  result_Ministral-8B-Instruct-2410_COMPLETION.json  result_Ministral-8B-Instruct-2410_NOUN.json  (+44 more)
src/: models.py
tests/: test_custom_model.py  test_example.py  test_llama3_with_gpt4o.py
(+57 files in other folders)
